# Indigo-machine

./: .env.example  Makefile  README.md  pyproject.toml
.indigo_data/: indigo.db
docs/: ARCHITECTURE.md  CHECKPOINTS.md
docs/checkpoints/: snapshot-20251224-140700.txt  snapshot-20251224-145026.txt  snapshot-20251224-145135.txt  snapshot-20251224-160313.txt  snapshot-20251224-160751.txt  snapshot-20251224-160939.txt  snapshot-20251224-162137.txt
src/config/: settings.py
src/indigo/api/: app.py
src/indigo/api/blueprints/: __init__.py  devices.py  health.py  lanes.py  recipes.py
src/indigo/config/: settings.py
src/indigo/db/: engine.py
src/indigo/db/orm/: tables.py
src/indigo/hw/bus/: base.py  sim_bus.py
src/indigo/hw/devices/: __init__.py  laneboard.py  utilityboard.py
src/indigo/hw/protocol/: codec.py
src/indigo/hw/transport/: base.py  sim.py
src/indigo/services/: bus_poll_service.py  cycle_runner.py  device_registry.py  lane_service.py  recipe_service.py  recipe_store.py  runner.py  system_state.py
src/indigo/util/: logging.py
tests/integration/: test_devices_smoke.py  test_health.py
tests/unit/: test_recipe_store.py
tools/: post_recipe_lane1.py  snapshot_core_imports.py  snapshot_settings.py
