[project]
name = "indigo-machine"
version = "0.1.0"
description = "Indigo machine API and services"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "waitress>=3.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["deploy", ".venv", "venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # allow long lines; we already set line-length

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

